# pytorch-in-vs

cmake_pytorch/: CMakeLists.txt  main.cpp
